--- a/_posts/2024-11-20-test.md
+++ b/_posts/2024-11-20-test.md
@@ -8,3 +8,5 @@ title:  "test"
 **Hello world**, this is my first Jekyll blog post.
 
 I hope you like it!
+
+![image-20241120204258580](D:\sumin-jeong-smj-github-pages\sumin-jeong-smj.github.io\images\2024-11-20-test\image-20241120204258580.png)
